First draft of Expression section

--- a/TypeCheckerGenerator/latex/Expression.tex
+++ b/TypeCheckerGenerator/latex/Expression.tex
@@ -17,17 +17,15 @@
 \begin{code}%
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaKeyword{import}\AgdaSpace{}%
-\AgdaModule{CoreLanguage}\AgdaSpace{}%
-\AgdaKeyword{renaming}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{↠}\AgdaSpace{}%
-\AgdaSymbol{to}\AgdaSpace{}%
-\AgdaFunction{↠↠}\AgdaSymbol{)}\<%
+\AgdaModule{CoreLanguage}\<%
 \\
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaKeyword{import}\AgdaSpace{}%
 \AgdaModule{Pattern}\AgdaSpace{}%
-\AgdaKeyword{using}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaDatatype{Pattern}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaKeyword{using}\<%
+\\
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaSymbol{(}\AgdaDatatype{Pattern}\AgdaSymbol{;}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{\AgdaUnderscore{}-Env}}\AgdaSymbol{;}\AgdaSpace{}%
 \AgdaDatatype{svar}\AgdaSymbol{;}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⊗\AgdaUnderscore{}}}\AgdaSymbol{;}\AgdaSpace{}%
@@ -115,9 +113,23 @@
 \>[4]\AgdaGeneralizable{d'}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaDatatype{Dir}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
+\end{code}
+}
+
+Expressions allow us to define a way that we might construct a term from a
+pattern. In the context of a conclusion of a typing rule, where a pattern
+might match and sculpt out component parts of an input or subject,
+expressions allow us to define an output in terms in terms of these component
+parts. In a premise, it allows us to build an input in terms of the
+conclusion and the output of all previous premise.
+
+It mirrors the structure of our terms except that it includes the option
+to instantiate a place in a pattern with some substitution of term variables
+that it may depend on. When we are using an expression after matching against
+the appropriate pattern and gaining an environment for it, this gives us the
+necessary information to build a term.
+
+\begin{code}%
 \>[0]\AgdaFunction{Expr}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaDatatype{Pattern}\AgdaSpace{}%
@@ -227,12 +239,6 @@
 \AgdaBound{p}\AgdaSpace{}%
 \AgdaBound{γ}\<%
 \\
-%
-\\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaKeyword{infixr}\AgdaSpace{}%
-\AgdaNumber{20}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{\AgdaUnderscore{}∙\AgdaUnderscore{}}}\<%
-\\
 \>[0]\<%
 \\
 \>[0]\AgdaKeyword{data}\AgdaSpace{}%
@@ -302,22 +308,62 @@
 \AgdaDatatype{com}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSpace{}%
 \AgdaBound{γ}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaComment{\{-Expression : Scoped
-Expression γ = ∀ \{δ\} \{p : Pattern δ\} \{d\} → Expr p d γ-\}}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaComment{-- expressions are thinnable on γ}\<%
-\\
-\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⟨exp\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
+\end{code}
+
+As is expected by now, we define various functions allowing us to thin,
+weaken and open expressions and substitutions thereof for later use.
+
+\begin{code}%
+\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⟨exp\AgdaUnderscore{}}}%
+\>[9]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaFunction{Thinnable}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{Expr}\AgdaSpace{}%
 \AgdaGeneralizable{p}\AgdaSpace{}%
 \AgdaGeneralizable{d}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}\textasciicircum{}exp}}%
+\>[9]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Weakenable}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{Expr}\AgdaSpace{}%
+\AgdaGeneralizable{p}\AgdaSpace{}%
+\AgdaGeneralizable{d}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}\textasciicircum{}/exp}}%
+\>[9]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Weakenable}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaGeneralizable{γ}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⇒[}}\AgdaSpace{}%
+\AgdaFunction{Expr}\AgdaSpace{}%
+\AgdaGeneralizable{p}\AgdaSpace{}%
+\AgdaGeneralizable{d}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{]\AgdaUnderscore{}}}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⊗expr\AgdaUnderscore{}}}%
+\>[9]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Scope}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{Expr}\AgdaSpace{}%
+\AgdaGeneralizable{p}\AgdaSpace{}%
+\AgdaGeneralizable{d}\AgdaSpace{}%
+\AgdaGeneralizable{δ}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{Expr}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⊗}}\AgdaSpace{}%
+\AgdaGeneralizable{p}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaGeneralizable{d}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
+\AgdaOperator{\AgdaPrimitive{+}}\AgdaSpace{}%
+\AgdaGeneralizable{δ}\AgdaSymbol{)}\<%
+\end{code}
+
+\hide{
+\begin{code}%
+\>[0]\AgdaKeyword{infixr}\AgdaSpace{}%
+\AgdaNumber{20}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{\AgdaUnderscore{}∙\AgdaUnderscore{}}}\<%
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
@@ -484,15 +530,8 @@ Expression γ = ∀ \{δ\} \{p : Pattern δ\} \{d\} → Expr p d γ-\}}\<%
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaComment{-- expressions are weakenable on γ}\<%
-\\
-\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}\textasciicircum{}exp}}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaFunction{Weakenable}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{Expr}\AgdaSpace{}%
-\AgdaGeneralizable{p}\AgdaSpace{}%
-\AgdaGeneralizable{d}\AgdaSymbol{)}\<%
-\\
+%
+\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}\textasciicircum{}exp}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaArgument{p}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
@@ -511,20 +550,6 @@ Expression γ = ∀ \{δ\} \{p : Pattern δ\} \{d\} → Expr p d γ-\}}\<%
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaComment{-- substituting expressions is weakenable}\<%
-\\
-\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}\textasciicircum{}/exp}}\AgdaSpace{}%
-\AgdaSymbol{:}%
-\>[327I]\AgdaFunction{Weakenable}\<%
-\\
-\>[327I][@{}l@{\AgdaIndent{0}}]%
-\>[10]\AgdaSymbol{(}\AgdaGeneralizable{γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⇒[}}\AgdaSpace{}%
-\AgdaFunction{Expr}\AgdaSpace{}%
-\AgdaGeneralizable{p}\AgdaSpace{}%
-\AgdaGeneralizable{d}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{]\AgdaUnderscore{}}}\AgdaSymbol{)}\<%
-\\
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}\textasciicircum{}/exp}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaArgument{p}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
@@ -540,222 +565,6 @@ Expression γ = ∀ \{δ\} \{p : Pattern δ\} \{d\} → Expr p d γ-\}}\<%
 \AgdaBound{p}\AgdaSpace{}%
 \AgdaBound{d}\AgdaSymbol{\}}%
 \>[47]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⟨exp\AgdaUnderscore{}}}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-%
-\\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaOperator{\AgdaFunction{↠\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{com}\AgdaSpace{}%
-\AgdaGeneralizable{p}\AgdaSpace{}%
-\AgdaGeneralizable{γ}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{con}\AgdaSpace{}%
-\AgdaGeneralizable{p}\AgdaSpace{}%
-\AgdaGeneralizable{γ}\<%
-\\
-\>[0]\AgdaOperator{\AgdaFunction{↠}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{t}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
-\AgdaBound{T}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaBound{t}\<%
-\\
-\>[0]\AgdaCatchallClause{\AgdaOperator{\AgdaFunction{↠}}}%
-\>[3]\AgdaCatchallClause{\AgdaBound{x}}%
-\>[10]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{thunk}\AgdaSpace{}%
-\AgdaBound{x}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-\>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaComment{-- actually performing the lcon substitution}\<%
-\\
-\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}//\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaSymbol{:}%
-\>[8]\AgdaFunction{Expr}\AgdaSpace{}%
-\AgdaGeneralizable{p}\AgdaSpace{}%
-\AgdaGeneralizable{d}\AgdaSpace{}%
-\AgdaGeneralizable{γ'}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaGeneralizable{γ'}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⇒[}}\AgdaSpace{}%
-\AgdaFunction{Expr}\AgdaSpace{}%
-\AgdaGeneralizable{p}\AgdaSpace{}%
-\AgdaInductiveConstructor{compu}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{]}}\AgdaSpace{}%
-\AgdaGeneralizable{γ}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaFunction{Expr}\AgdaSpace{}%
-\AgdaGeneralizable{p}\AgdaSpace{}%
-\AgdaGeneralizable{d}\AgdaSpace{}%
-\AgdaGeneralizable{γ}\<%
-\\
-\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}//\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaArgument{d}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{`}\AgdaSpace{}%
-\AgdaBound{x}\AgdaSymbol{)}%
-\>[29]\AgdaBound{σ}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{`}\AgdaSpace{}%
-\AgdaBound{x}\<%
-\\
-\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}//\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaArgument{d}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{s}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
-\AgdaBound{t}\AgdaSymbol{)}%
-\>[29]\AgdaBound{σ}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{s}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{//}}\AgdaSpace{}%
-\AgdaBound{σ}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{t}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{//}}\AgdaSpace{}%
-\AgdaBound{σ}\AgdaSymbol{)}\<%
-\\
-\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}//\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaArgument{d}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{bind}\AgdaSpace{}%
-\AgdaBound{t}\AgdaSymbol{)}%
-\>[29]\AgdaBound{σ}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{bind}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{t}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{//}}\AgdaSpace{}%
-\AgdaSymbol{((}\AgdaBound{σ}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{\textasciicircum{}/exp}}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{-,}}\AgdaSpace{}%
-\AgdaInductiveConstructor{var}\AgdaSpace{}%
-\AgdaInductiveConstructor{ze}\AgdaSymbol{))}\<%
-\\
-\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}//\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaArgument{d}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{thunk}\AgdaSpace{}%
-\AgdaBound{x}\AgdaSymbol{)}%
-\>[29]\AgdaBound{σ}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{↠}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{//}}\AgdaSpace{}%
-\AgdaBound{σ}\AgdaSymbol{)}\<%
-\\
-\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}//\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaArgument{d}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{ξ}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{/}}\AgdaSpace{}%
-\AgdaBound{σ'}\AgdaSymbol{)}%
-\>[29]\AgdaBound{σ}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaBound{ξ}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{/}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{σ'}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{∘`}}\AgdaSpace{}%
-\AgdaBound{σ}\AgdaSymbol{)}\<%
-\\
-\>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaKeyword{where}\<%
-\\
-%
-\>[2]\AgdaComment{-- had to inline this composition here to shut the termination checker up}\<%
-\\
-%
-\>[2]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}∘`\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaFunction{Composable}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⇒[}}\AgdaSpace{}%
-\AgdaDatatype{com}\AgdaSpace{}%
-\AgdaGeneralizable{p}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{]\AgdaUnderscore{}}}\AgdaSymbol{)}\<%
-\\
-%
-\>[2]\AgdaInductiveConstructor{ε}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{∘`}}%
-\>[16]\AgdaBound{two}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{ε}\<%
-\\
-%
-\>[2]\AgdaSymbol{(}\AgdaBound{one}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{-,}}\AgdaSpace{}%
-\AgdaBound{x}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{∘`}}\AgdaSpace{}%
-\AgdaBound{two}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{one}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{∘`}}\AgdaSpace{}%
-\AgdaBound{two}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{-,}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{//}}\AgdaSpace{}%
-\AgdaBound{two}\AgdaSymbol{)}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}//\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaArgument{p}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaBound{p}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaArgument{d}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{compu}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{var}\AgdaSpace{}%
-\AgdaBound{v}\AgdaSymbol{)}%
-\>[40]\AgdaBound{σ}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{lookup}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{Expr}\AgdaSpace{}%
-\AgdaBound{p}\AgdaSpace{}%
-\AgdaInductiveConstructor{compu}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaBound{σ}\AgdaSpace{}%
-\AgdaBound{v}\<%
-\\
-\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}//\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaArgument{d}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{compu}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{elim}\AgdaSpace{}%
-\AgdaBound{e}\AgdaSpace{}%
-\AgdaBound{s}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaBound{σ}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{elim}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{e}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{//}}\AgdaSpace{}%
-\AgdaBound{σ}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{s}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{//}}\AgdaSpace{}%
-\AgdaBound{σ}\AgdaSymbol{)}\<%
-\\
-\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}//\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaArgument{d}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{compu}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{t}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
-\AgdaBound{T}\AgdaSymbol{)}%
-\>[29]\AgdaBound{σ}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{t}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{//}}\AgdaSpace{}%
-\AgdaBound{σ}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{T}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{//}}\AgdaSpace{}%
-\AgdaBound{σ}\AgdaSymbol{)}\<%
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
@@ -779,8 +588,10 @@ Expression γ = ∀ \{δ\} \{p : Pattern δ\} \{d\} → Expr p d γ-\}}\<%
 \AgdaBound{γ}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaArgument{p}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
-\AgdaBound{p}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSymbol{\}}\<%
+\\
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaFunction{\textasciicircum{}sub}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaArgument{T}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
@@ -796,54 +607,32 @@ Expression γ = ∀ \{δ\} \{p : Pattern δ\} \{d\} → Expr p d γ-\}}\<%
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
-%
-\\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⊗expr\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaFunction{Scope}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaFunction{Expr}\AgdaSpace{}%
-\AgdaGeneralizable{p}\AgdaSpace{}%
-\AgdaGeneralizable{d}\AgdaSpace{}%
-\AgdaGeneralizable{δ}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaFunction{Expr}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⊗}}\AgdaSpace{}%
-\AgdaGeneralizable{p}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaGeneralizable{d}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaPrimitive{+}}\AgdaSpace{}%
-\AgdaGeneralizable{δ}\AgdaSymbol{)}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaComment{-- we can 'open' a substitution of expressions}\<%
-\\
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⊗sub\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{δ'}\AgdaSpace{}%
+\AgdaSymbol{:}%
+\>[383I]\AgdaSymbol{(}\AgdaBound{δ'}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaFunction{Scope}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaGeneralizable{δ}\AgdaSpace{}%
+\AgdaSymbol{→}\<%
+\\
+\>[.][@{}l@{}]\<[383I]%
+\>[9]\AgdaGeneralizable{δ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⇒[}}\AgdaSpace{}%
 \AgdaFunction{Expr}\AgdaSpace{}%
 \AgdaGeneralizable{p}\AgdaSpace{}%
 \AgdaInductiveConstructor{compu}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{]}}\AgdaSpace{}%
 \AgdaGeneralizable{γ}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{δ'}\AgdaSpace{}%
+\AgdaSymbol{→}\<%
+\\
+%
+\>[9]\AgdaSymbol{(}\AgdaBound{δ'}\AgdaSpace{}%
 \AgdaOperator{\AgdaPrimitive{+}}\AgdaSpace{}%
 \AgdaGeneralizable{δ}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⇒[}}\AgdaSpace{}%
 \AgdaFunction{Expr}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{δ'}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⊗}}%
-\>[72]\AgdaGeneralizable{p}\AgdaSymbol{)}\AgdaSpace{}%
+\>[33]\AgdaGeneralizable{p}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaInductiveConstructor{compu}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{]}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{δ'}\AgdaSpace{}%
@@ -858,8 +647,10 @@ Expression γ = ∀ \{δ\} \{p : Pattern δ\} \{d\} → Expr p d γ-\}}\<%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaBound{γ}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaBound{δ'}\AgdaSpace{}%
-\AgdaInductiveConstructor{ε}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{ε}\<%
+\\
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaFunction{⟨sub}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaArgument{T}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
@@ -891,8 +682,6 @@ Expression γ = ∀ \{δ\} \{p : Pattern δ\} \{d\} → Expr p d γ-\}}\<%
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaComment{-- so we can 'open up' an expression}\<%
-\\
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⊗expr\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaArgument{d}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
@@ -1010,9 +799,15 @@ Expression γ = ∀ \{δ\} \{p : Pattern δ\} \{d\} → Expr p d γ-\}}\<%
 \AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⊗expr}}\AgdaSpace{}%
 \AgdaBound{T}\AgdaSymbol{)}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
+\end{code}
+}
+
+Finally we are able to generate a term from an expression and some opening
+of the appropriate environment. Most of the cases recurse structurally, while
+variables are simply opened to encompassing scope, however we can note here
+how it is that we process our svar instantiations
+
+\begin{code}%
 \>[0]\AgdaFunction{toTerm}%
 \>[8]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaGeneralizable{γ}\AgdaSpace{}%
@@ -1031,59 +826,7 @@ Expression γ = ∀ \{δ\} \{p : Pattern δ\} \{d\} → Expr p d γ-\}}\<%
 \AgdaOperator{\AgdaPrimitive{+}}\AgdaSpace{}%
 \AgdaGeneralizable{γ'}\AgdaSymbol{)}\<%
 \\
-\>[0]\AgdaFunction{toTerm}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaArgument{d}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaBound{penv}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{`}\AgdaSpace{}%
-\AgdaBound{x}\AgdaSymbol{)}%
-\>[33]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{`}\AgdaSpace{}%
-\AgdaBound{x}\<%
-\\
-\>[0]\AgdaFunction{toTerm}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaArgument{d}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaBound{penv}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{s}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
-\AgdaBound{t}\AgdaSymbol{)}%
-\>[33]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{toTerm}\AgdaSpace{}%
-\AgdaBound{penv}\AgdaSpace{}%
-\AgdaBound{s}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{toTerm}\AgdaSpace{}%
-\AgdaBound{penv}\AgdaSpace{}%
-\AgdaBound{t}\AgdaSymbol{)}\<%
-\\
-\>[0]\AgdaFunction{toTerm}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaArgument{d}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaBound{penv}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{bind}\AgdaSpace{}%
-\AgdaBound{t}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{bind}%
-\>[41]\AgdaSymbol{(}\AgdaFunction{toTerm}\AgdaSpace{}%
-\AgdaBound{penv}\AgdaSpace{}%
-\AgdaBound{t}\AgdaSymbol{)}\<%
-\\
-\>[0]\AgdaFunction{toTerm}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaArgument{d}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaBound{penv}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{thunk}\AgdaSpace{}%
-\AgdaBound{x}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{↠↠}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{toTerm}\AgdaSpace{}%
-\AgdaBound{penv}\AgdaSpace{}%
-\AgdaBound{x}\AgdaSymbol{)}\<%
+\>[0]\AgdaComment{-- ...}\<%
 \\
 \>[0]\AgdaFunction{toTerm}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaArgument{γ}\AgdaSpace{}%
@@ -1102,17 +845,17 @@ Expression γ = ∀ \{δ\} \{p : Pattern δ\} \{d\} → Expr p d γ-\}}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaSymbol{=}%
-\>[771I]\AgdaKeyword{let}\AgdaSpace{}%
-\AgdaBound{σpenv}\AgdaSpace{}%
+\>[561I]\AgdaKeyword{let}\AgdaSpace{}%
+\AgdaBound{σ'}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{helper}\AgdaSpace{}%
+\AgdaFunction{map-toTerm}\AgdaSpace{}%
 \AgdaBound{σ}\AgdaSpace{}%
 \AgdaBound{penv}\AgdaSpace{}%
 \AgdaKeyword{in}\<%
 \\
-\>[.][@{}l@{}]\<[771I]%
+\>[.][@{}l@{}]\<[561I]%
 \>[4]\AgdaKeyword{let}\AgdaSpace{}%
-\AgdaBound{thingy}\AgdaSpace{}%
+\AgdaBound{freevars}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaFunction{⟨sub}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaArgument{T}\AgdaSpace{}%
@@ -1131,15 +874,29 @@ Expression γ = ∀ \{δ\} \{p : Pattern δ\} \{d\} → Expr p d γ-\}}\<%
 \AgdaOperator{\AgdaFunction{‼}}\AgdaSpace{}%
 \AgdaBound{penv}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{/term}}\AgdaSpace{}%
-\AgdaSymbol{((}\AgdaBound{thingy}\AgdaSpace{}%
+\AgdaSymbol{((}\AgdaBound{freevars}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{++}}\AgdaSpace{}%
-\AgdaBound{σpenv}\AgdaSymbol{))}\<%
+\AgdaBound{σ'}\AgdaSymbol{))}\<%
 \\
-%
+\>[0]\AgdaComment{-- ...}\<%
+\end{code}
+
+That is to say, we first resolve the substitution of expressions to one of
+terms (here we must inline a specialisation of map in order to satisfy Agda's
+termination checker) before extending it with the identity substitution for
+all the free variables and finally performing the substitution on the term
+taken from the environment.
+
+In short, we subtitute the bound variables in the term but ensure not to
+affect any free variables that may exist.
+
+\hide{
+\begin{code}%
+\>[0][@{}l@{\AgdaIndent{1}}]%
 \>[4]\AgdaKeyword{where}\<%
 \\
 \>[4][@{}l@{\AgdaIndent{0}}]%
-\>[6]\AgdaFunction{helper}\AgdaSpace{}%
+\>[6]\AgdaFunction{map-toTerm}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{γ}\AgdaSymbol{\}}\AgdaSpace{}%
@@ -1156,7 +913,7 @@ Expression γ = ∀ \{δ\} \{p : Pattern δ\} \{d\} → Expr p d γ-\}}\<%
 \AgdaOperator{\AgdaFunction{⊗}}\AgdaSpace{}%
 \AgdaGeneralizable{p}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{-Env}}\AgdaSymbol{)}%
-\>[61]\AgdaSymbol{→}\AgdaSpace{}%
+\>[65]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaGeneralizable{δ'}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⇒[}}\AgdaSpace{}%
 \AgdaFunction{Term}\AgdaSpace{}%
@@ -1167,26 +924,80 @@ Expression γ = ∀ \{δ\} \{p : Pattern δ\} \{d\} → Expr p d γ-\}}\<%
 \AgdaBound{γ'}\AgdaSymbol{)}\<%
 \\
 %
-\>[6]\AgdaFunction{helper}\AgdaSpace{}%
+\>[6]\AgdaFunction{map-toTerm}\AgdaSpace{}%
 \AgdaInductiveConstructor{ε}\AgdaSpace{}%
 \AgdaBound{env}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{ε}\<%
 \\
 %
-\>[6]\AgdaFunction{helper}\AgdaSpace{}%
+\>[6]\AgdaFunction{map-toTerm}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{σ}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{-,}}\AgdaSpace{}%
 \AgdaBound{x}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{env}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{helper}\AgdaSpace{}%
+\AgdaFunction{map-toTerm}\AgdaSpace{}%
 \AgdaBound{σ}\AgdaSpace{}%
 \AgdaBound{env}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{-,}}\AgdaSpace{}%
 \AgdaFunction{toTerm}\AgdaSpace{}%
 \AgdaBound{env}\AgdaSpace{}%
 \AgdaBound{x}\<%
+\\
+\>[0]\AgdaFunction{toTerm}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaArgument{d}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{penv}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{`}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSymbol{)}%
+\>[35]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{`}\AgdaSpace{}%
+\AgdaBound{x}\<%
+\\
+\>[0]\AgdaFunction{toTerm}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaArgument{d}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{penv}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{s}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSymbol{)}%
+\>[35]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{toTerm}\AgdaSpace{}%
+\AgdaBound{penv}\AgdaSpace{}%
+\AgdaBound{s}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{toTerm}\AgdaSpace{}%
+\AgdaBound{penv}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaFunction{toTerm}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaArgument{d}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{penv}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{bind}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSymbol{)}%
+\>[35]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{bind}%
+\>[43]\AgdaSymbol{(}\AgdaFunction{toTerm}\AgdaSpace{}%
+\AgdaBound{penv}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaFunction{toTerm}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaArgument{d}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{penv}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{thunk}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSymbol{)}%
+\>[35]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaFunction{↠}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{toTerm}\AgdaSpace{}%
+\AgdaBound{penv}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaFunction{toTerm}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaArgument{γ}\AgdaSpace{}%
@@ -1196,18 +1007,18 @@ Expression γ = ∀ \{δ\} \{p : Pattern δ\} \{d\} → Expr p d γ-\}}\<%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{compu}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaArgument{γ'}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaBound{γ'}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{=}%
+\>[676I]\AgdaBound{γ'}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaBound{penv}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{var}\AgdaSpace{}%
-\AgdaBound{x}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSymbol{)}\<%
+\\
+\>[676I][@{}l@{\AgdaIndent{0}}]%
+\>[35]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{var}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⟨var}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{▹}}\AgdaSpace{}%
-\AgdaBound{γ'}\AgdaSymbol{))}\<%
+\AgdaOperator{\AgdaFunction{⊗var}}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaFunction{toTerm}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaArgument{d}\AgdaSpace{}%
@@ -1233,8 +1044,8 @@ Expression γ = ∀ \{δ\} \{p : Pattern δ\} \{d\} → Expr p d γ-\}}\<%
 \AgdaBound{penv}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{t}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
-\AgdaBound{T}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{T}\AgdaSymbol{)}%
+\>[35]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaFunction{toTerm}\AgdaSpace{}%
 \AgdaBound{penv}\AgdaSpace{}%
 \AgdaBound{t}\AgdaSpace{}%
