--- a/TypeCheckerGenerator/latex/Opening.tex
+++ b/TypeCheckerGenerator/latex/Opening.tex
@@ -77,3 +77,6 @@ As with previous concepts, we adopt a naming convension when constructing
 openings where we use ⊗ often suffexed to identify the kind of thing we
 are opening.
 
+If some entity scoped in $δ$ has an action of a thinning defined for it,
+opening it by $γ$ may be defined as thinning it by $γ ▹ δ$. \hl{check this}
+
